# sapiaverse-population-simulation

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
data/: results.json  results_5_incentive.json
scripts/: check_llm.py  diagnose_sampling.py  fetch_census.py  generate_personas.py  list_models.py  make_agents_table.py  run_simulation.py  show_personas.py
src/analytics/: aggregate.py  benchmark.py
src/census/: cache.py  client.py  constants.py
src/config/: settings.py
src/llm/: client.py
src/personas/: builder.py  decode.py  enrich.py  models.py  names.py  ocean.py  sampling.py
src/sapiaverse_population_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scenarios/: registry.py
src/simulation/: orchestrator.py  prompts.py  runtime.py
tests/: test_config.py
