[project]
name = "sapiaverse-population-simulation"
version = "0.1.0"
description = "Generative-agent simulation of SF residents voting on a ballot measure"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
