[project]
name = "sapiaverse-population-simulation"
version = "0.1.0"
description = "Generative-agent simulation of SF residents voting on a ballot measure"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
pythonPath = [".venv/bin/python"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
extraPaths = ["src"]
